--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@ body {
   background-position: center;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 inp {
   padding: 0 12px;
+}
+
+/* Add to your global CSS if not already included */
+.glow-text {
+  text-shadow: 0 0 6px #870c15, 0 0 12px #870c15;
 }
